# ncube

./: CMakeLists.txt  main.c
include/: linear_interpolate.h  pp_macros.h  proc.h  shape.h
src/: construct.c  linear.c  linear_interpolate.c  proc.c  shape.c
